# bench-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  websocat
alembic/: env.py
alembic/versions/: 2026_05_23_1647-181e99dc82ff_user_model.py
app/: annotations.py  config.py  database.py  exceptions.py  gunicorn.conf.py  logger.py  main.py  redis_storage.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routers/: __init__.py  auth.py  health_check.py  session.py  user_router.py
app/core/: __init__.py  alias.py  connections.py  security.py  serializer_helper.py  session.py  token.py
app/exceptions/: __init__.py  token_exceptions.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  abc_repo.py  redis_repo.py  session_repo.py  user_repo.py
app/schemas/: __init__.py  auth.py  event.py  message.py  payload.py  session.py  user_schema.py
app/services/: __init__.py  abc_service.py  event_handler_service.py  session_manager_service.py  session_search_service.py  session_service.py  user_service.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
tests/: conftest.py
tests/api/v1/routers/: test_auth.py  test_session.py
tests/core/: test_connections.py
tests/services/: test_session_manager_service.py  test_session_search_service.py  test_user_service.py
