[tool.poetry]
name = "bench-backend"
version = "0.1.0"
description = ""
authors = ["fokze-13 <108113475+fokze-13@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.136.1"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
asyncio = "^4.0.0"
environs = "^15.0.1"
asyncpg = "^0.31.0"
uvicorn = "^0.47.0"
pydantic-settings = "^2.14.1"
greenlet = "^3.5.0"
jwt = "^1.4.0"
pyjwt = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
